[tool.poetry]
name = "test-crypto"
version = "0.1.0"
description = ""
authors = ["Richard Estwick <restwick@cybeats.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^43.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
